@@ -1,1 +1,1 @@
-#define TAGSISTANT_BUILDNUMBER "20140202.000064"
+#define TAGSISTANT_BUILDNUMBER "20140202.000092"
